fixed menu spacing for mobile

--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -126,7 +126,7 @@
 .mobileMenuItems {
   display: flex;
   flex-direction: column;
-  row-gap: 1vw;
+  row-gap: clamp(20px, 5vh, 5vh);
   list-style-type: none;
   margin: 0;
   padding: 0;
